Wireshark not able to decode the PPP frame in a sflow(RFC3176) flow sample packet because Wireshark incorrectly read the protocol in PPP frame header
This issue was migrated from bug 5746 in our old bug tracker.
Original bug information:
Reporter: BryanFeng
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: 1.4.3
Attachments:
Wireshark_sFlow_PPP.pcap: Pcap file showing sFlow flow samples having problem
: A screenshot showing the wrong decoding of PPP frame
RegularPPPframe.pcap: A regular PPP frame for reference