Handle PPP in HDLC framing.  Fixes bug 5746.

svn path=/trunk/; revision=36177